--- a/battle.html
+++ b/battle.html
@@ -5,7 +5,7 @@
 <title>Forsaken Fortune Face-Off</title>
 </head>
 
-<body background="back.jpg">
+<body background="back.jpg" style="align:center;">
 	<div id="wrap">
 <p><img src="torch.gif" width="58" height="113" alt=""/><img src="Forsaken Fortune Face-Off Logo Square.png" width="215" height="173" alt=""/>
   <img src="torch.gif" width="58" height="113" alt=""/></p>
