--- a/battle.html
+++ b/battle.html
@@ -3,9 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Forsaken Fortune Face-Off</title>
+<style>
+	#wrap {
+		margin: auto;
+	}
+	</style>
 </head>
 
-<body background="back.jpg" style="align:center;">
+<body background="back.jpg">
 	<div id="wrap">
 <p><img src="torch.gif" width="58" height="113" alt=""/><img src="Forsaken Fortune Face-Off Logo Square.png" width="215" height="173" alt=""/>
   <img src="torch.gif" width="58" height="113" alt=""/></p>
