--- a/battle.html
+++ b/battle.html
@@ -5,8 +5,9 @@
 <title>Forsaken Fortune Face-Off</title>
 <style>
 	#wrap {
-		width: 500px;
+		width: 800px;
 		margin: auto;
+		text-align: center;
 	}
 	</style>
 </head>
