--- a/battle.html
+++ b/battle.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Forsaken Fortune Face-Off</title>
-<style>
+	<style>
 	#wrap {
-		width: 800px;
+		width: 9
+			00px;
 		margin: auto;
 		text-align: center;
 	}
@@ -13,16 +14,18 @@
 </head>
 
 <body background="back.jpg">
-	<div id="wrap">
-<p><img src="torch.gif" width="58" height="113" alt=""/><img src="Forsaken Fortune Face-Off Logo Square.png" width="215" height="173" alt=""/>
-  <img src="torch.gif" width="58" height="113" alt=""/></p>
-<p style="color:purple;font-size:25px;">Test the fates and sign up for battle:&nbsp; &nbsp;<a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="awmaswordsrotor.gif" width="81" height="109" alt=""/></a> &lt;--- Click here</p>
-<p style="color:purple;font-size:25px;">Join our audience through this Zoom portal and witness epic storytelling combat from a safe distance:  <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="80" height="36" alt=""/></a> &lt;--- Click here </p>
+<div id="wrap">
+<p><img src="torch.gif" style="padding-right: 20px;" height="113" alt=""/><img src="Forsaken Fortune Face-Off Logo Square.png" width="215" height="173" alt=""/>
+  <img src="torch.gif" style="padding-left: 20px;" width="58" height="113" alt=""/></p>
+<p style="color:purple;font-size:25px;">Test the fates and sign up for battle:&nbsp; <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="awmaswordsrotor.gif" width="41" height="56" alt=""/></a> &lt;--- Click here</p>
+<p style="color:purple;font-size:25px;">Join the audience through this Zoom portal and witness epic storytelling combat from a safe distance:&nbsp; &nbsp;&nbsp;  <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a> &lt;--- Click here </p>
 <p style="color:purple;font-size:25px;"><img src="schedule.gif" width="138" height="42" alt=""/></p>
-<p style="color:purple;font-size:25px;"> Friday 12am-2am EST / 9pm-11pm PST </p>
-<p style="color:purple;font-size:25px;">Saturday 12am-2am EST / 9pm-11pm PST </p>
-<p style="color:purple;font-size:25px;">Sunday 11pm-12am EST / 8-9pm PST</p>
+<p style="color:mediumpurple;font-size:25px;">Friday 12am-2am EST / 9pm-11pm PST </p>
+<p style="color:mediumpurple;font-size:25px;">Saturday 12am-2am EST / 9pm-11pm PST </p>
+<p style="color:mediumpurple;font-size:25px;">Sunday 11pm-12am EST / 8-9pm PST</p>
 <p style="color:purple;font-size:20px;"><a href="mailto:forsaketarot@gmail.com"><img src="glassbutton-email1w.gif" width="84" height="40" alt=""/></a></p>
+		<p><script type="text/javascript" src="//counter.websiteout.net/js/3/5/0/0"></script></p>
 <img src="fireline.gif" width="571" height="40" alt=""/> </div>
+	
 </body>
 </html>
