--- a/battle.html
+++ b/battle.html
@@ -24,8 +24,12 @@
 <p style="color:mediumpurple;font-size:25px;">Saturday 12am-2am EST / 9pm-11pm PST </p>
 <p style="color:mediumpurple;font-size:25px;">Sunday 11pm-12am EST / 8-9pm PST</p>
 <p style="color:purple;font-size:20px;"><a href="mailto:forsaketarot@gmail.com"><img src="glassbutton-email1w.gif" width="84" height="40" alt=""/></a></p>
-		<p><script type="text/javascript" src="//counter.websiteout.net/js/3/5/0/0"></script></p>
-<img src="fireline.gif" width="571" height="40" alt=""/> </div>
+	<br>
+	<p><script type="text/javascript" src="//counter.websiteout.net/js/3/5/0/0"></script></p>
+	<br>
+	<br>
+	<br>
+<img src="fireline.gif" width="571" height="40" alt=""/><img src="fireline.gif" width="571" height="40" alt=""/> </div>
 	
 </body>
 </html>
