--- a/battle.html
+++ b/battle.html
@@ -15,10 +15,10 @@
 
 <body background="back.jpg">
 <div id="wrap">
-<p><img src="torch.gif" style="padding-right: 20px;" height="113" alt=""/><img src="Forsaken Fortune Face-Off Logo Square.png" width="215" height="173" alt=""/>
+<p><img src="torch.gif" style="padding-right: 20px;" height="113" alt=""/><img src="Forsaken Fortune Face-Off Logo Square.png" style="padding-top: 40px;" width="215" height="173" alt=""/>
   <img src="torch.gif" style="padding-left: 20px;" width="58" height="113" alt=""/></p>
 <p style="color:purple;font-size:25px;">Test the fates and sign up for battle:&nbsp; <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="awmaswordsrotor.gif" width="41" height="56" alt=""/></a> &lt;--- Click here</p>
-<p style="color:purple;font-size:25px;">Join the audience through this Zoom portal and witness epic storytelling combat from a safe distance:&nbsp; &nbsp;&nbsp;  <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a> &lt;--- Click here </p>
+<p style="color:purple;font-size:25px;">Join the audience through this Zoom portal and witness epic storytelling combat from a safe distance:&nbsp; <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a> &lt;--- Click here </p>
 <p style="color:purple;font-size:25px;"><img src="schedule.gif" width="138" height="42" alt=""/></p>
 <p style="color:mediumpurple;font-size:25px;">Friday 12am-2am EST / 9pm-11pm PST </p>
 <p style="color:mediumpurple;font-size:25px;">Saturday 12am-2am EST / 9pm-11pm PST </p>
