--- a/battle.html
+++ b/battle.html
@@ -17,17 +17,20 @@
 <div id="wrap">
 <p><img src="torch.gif" style="padding-right: 20px;" height="113" alt=""/><img src="Forsaken Fortune Face-Off Logo Square.png" style="padding-top: 40px;" width="215" height="173" alt=""/>
   <img src="torch.gif" style="padding-left: 20px;" width="58" height="113" alt=""/></p>
-<p style="color:purple;font-size:25px;">Test the fates and sign up for battle:&nbsp; <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="awmaswordsrotor.gif" width="41" height="56" alt=""/></a> &lt;--- Click here</p>
-<p style="color:purple;font-size:25px;">Join the audience through this Zoom portal and witness epic storytelling combat from a safe distance:&nbsp; <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a> &lt;--- Click here </p>
+<p style="color:purple;font-size:40px;">Step up and throw down at the Shattered Plane's premiere astral storytelling combat arena.&nbsp;</p>
+<p style="color:purple;font-size:25px;">Take the Fortune Personality Quiz to be considered for the competition: <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="awmaswordsrotor.gif" width="41" height="56" alt=""></a><span style="color:mediumpurple;font-size:25px;"> &lt;---Click here </span></p>
+<p style="color:purple;font-size:20px;">Forsaken acolytes will use this data to determine the ideal candidates for the arcane transmogrifying process and will reach out to guide them through the process.</p>
+<p style="color:purple;font-size:25px;">Not intereted in battling? You can still witness from a safe distance by joining the arena audience through our Zoom portals: </p>
 <p style="color:purple;font-size:25px;"><img src="schedule.gif" width="138" height="42" alt=""/></p>
-<p style="color:mediumpurple;font-size:25px;">Friday 12am-2am EST / 9pm-11pm PST </p>
-<p style="color:mediumpurple;font-size:25px;">Saturday 12am-2am EST / 9pm-11pm PST </p>
-<p style="color:mediumpurple;font-size:25px;">Sunday 11pm-12am EST / 8-9pm PST</p>
-<p style="color:purple;font-size:20px;"><a href="mailto:forsaketarot@gmail.com"><img src="glassbutton-email1w.gif" width="84" height="40" alt=""/></a></p>
+<p style="color:mediumpurple;font-size:25px;">Friday 9pm-11pm PST / 12am-2am EST</p>
+<p style="color:mediumpurple;font-size:25px;"><span style="color:purple;font-size:25px;"> Click here to enter---&gt;</span><span style="color:purple;font-size:25px;"> <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a></span></p>
+<p style="color:mediumpurple;font-size:25px;">Saturday  9pm-11pm PST / 12am-2am EST</p>
+<p style="color:mediumpurple;font-size:25px;"><span style="color:purple;font-size:25px;">Click here to enter---&gt;</span><span style="color:purple;font-size:25px;"> <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a></span></p>
+<p style="color:mediumpurple;font-size:25px;">Sunday  8pm-9pm PST / 11pm-12am EST</p>
+<p style="color:mediumpurple;font-size:25px;"><span style="color:purple;font-size:25px;"> Click here to enter---&gt;</span><span style="color:purple;font-size:25px;"> <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a></span></p>
+<p style="color:purple;font-size:20px;"><a href="mailto:forsakentarot@gmail.com"><img src="glassbutton-email1w.gif" width="84" height="40" alt=""/></a></p>
 	<br>
 	<p><script type="text/javascript" src="//counter.websiteout.net/js/3/5/0/0"></script></p>
-	<br>
-	<br>
 	<br>
 <img src="fireline.gif" width="571" height="40" alt=""/><img src="fireline.gif" width="571" height="40" alt=""/> </div>
 	
