--- a/battle.html
+++ b/battle.html
@@ -23,11 +23,11 @@
 <p style="color:purple;font-size:25px;">Not intereted in battling? You can still witness from a safe distance by joining the arena audience through our Zoom portals: </p>
 <p style="color:purple;font-size:25px;"><img src="schedule.gif" width="138" height="42" alt=""/></p>
 <p style="color:mediumpurple;font-size:25px;">Friday 9pm-11pm PST / 12am-2am EST</p>
-<p style="color:mediumpurple;font-size:25px;"><span style="color:purple;font-size:25px;"> Click here to enter---&gt;</span><span style="color:purple;font-size:25px;"> <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a></span></p>
+<p style="color:mediumpurple;font-size:25px;"><span style="color:purple;font-size:25px;"> Click here to enter---&gt;</span><span style="color:purple;font-size:25px;"> <a href="https://us02web.zoom.us/j/87926926786?pwd=N0hSY0RqQnF4ZzRVb3kvYm05UDNXUT09"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a></span></p>
 <p style="color:mediumpurple;font-size:25px;">Saturday  9pm-11pm PST / 12am-2am EST</p>
-<p style="color:mediumpurple;font-size:25px;"><span style="color:purple;font-size:25px;">Click here to enter---&gt;</span><span style="color:purple;font-size:25px;"> <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a></span></p>
+<p style="color:mediumpurple;font-size:25px;"><span style="color:purple;font-size:25px;">Click here to enter---&gt;</span><span style="color:purple;font-size:25px;"> <a href="https://us02web.zoom.us/j/87579767118?pwd=b09XRHRNVU9BMVNqQUtiRmM0WHhUdz09"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a></span></p>
 <p style="color:mediumpurple;font-size:25px;">Sunday  8pm-9pm PST / 11pm-12am EST</p>
-<p style="color:mediumpurple;font-size:25px;"><span style="color:purple;font-size:25px;"> Click here to enter---&gt;</span><span style="color:purple;font-size:25px;"> <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a></span></p>
+<p style="color:mediumpurple;font-size:25px;"><span style="color:purple;font-size:25px;"> Click here to enter---&gt;</span><span style="color:purple;font-size:25px;"> <a href="https://us02web.zoom.us/j/84120591150?pwd=UHlSTUFIUHpoZnFsa25KVzM1TzdVUT09"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a></span></p>
 <p style="color:purple;font-size:20px;"><a href="mailto:forsakentarot@gmail.com"><img src="glassbutton-email1w.gif" width="84" height="40" alt=""/></a></p>
 	<br>
 	<p><script type="text/javascript" src="//counter.websiteout.net/js/3/5/0/0"></script></p>
