--- a/battle.html
+++ b/battle.html
@@ -18,7 +18,7 @@
 
 <body background="back.jpg">
 <div id="wrap">
-<p><img src="torch.gif" style="padding-right: 20px;" height="113" alt=""/><img src="FFF-ZS-Image.jpg" style="padding-top: 10px;" width="215" height="216" alt=""/>
+<p><img src="torch.gif" style="padding-right: 20px;" height="113" alt=""/><img src="FFF-ZS-Image.png" style="padding-top: 5px;" width="215" height="215" alt=""/>
   <img src="torch.gif" style="padding-left: 20px;" width="58" height="113" alt=""/></p>
 <p class="small" style="color:purple;font-size:40px;">Step up and throw down at the Shattered Plane's premiere astral storytelling combat arena.&nbsp;</p>
 <p class="small" style="color:purple;font-size:25px;">Take the Fortune Personality Quiz to be considered for the competition: <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="awmaswordsrotor.gif" width="41" height="56" alt=""></a><span style="color:mediumpurple;font-size:25px;"> &lt;---Click here </span></p>
