--- a/battle.html
+++ b/battle.html
@@ -20,8 +20,8 @@
 <div id="wrap">
 <p><img src="torch.gif" style="padding-right: 20px;" height="113" alt=""/><img src="FFF-ZS-Image.png" style="padding-top: 5px;" width="215" height="215" alt=""/>
   <img src="torch.gif" style="padding-left: 20px;" width="58" height="113" alt=""/></p>
-<p class="small" style="color:purple;font-size:40px;">Step up and throw down at the Shattered Plane's premiere astral storytelling combat arena.&nbsp;</p>
-<p class="small" style="color:purple;font-size:25px;">Take the Fortune Personality Quiz to be considered for the competition: <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="awmaswordsrotor.gif" width="41" height="56" alt=""></a><span style="color:mediumpurple;font-size:25px;"> &lt;---Click here </span></p>
+<p style="color:purple;font-size:40px;">Step up and throw down at the Shattered Plane's premiere astral storytelling combat arena.&nbsp;</p>
+<p style="color:purple;font-size:25px;">Take the Fortune Personality Quiz to be considered for the competition: <a href="https://forms.gle/4ks3SPXJutDUWe4e7"><img src="awmaswordsrotor.gif" width="41" height="56" alt=""></a><span style="color:mediumpurple;font-size:25px;"> &lt;---Click here </span></p>
 <p style="color:purple;font-size:20px;">Forsaken acolytes will use this data to determine the ideal candidates for the arcane transmogrifying process and will reach out to guide them through the process.</p>
 <p style="color:purple;font-size:25px;">Not intereted in battling? You can still witness from a safe distance by joining the arena audience through our Zoom portals: </p>
 <p style="color:purple;font-size:25px;"><img src="schedule.gif" width="138" height="42" alt=""/></p>
