--- a/battle.html
+++ b/battle.html
@@ -33,7 +33,7 @@
 <p style="color:mediumpurple;font-size:25px;"><span style="color:purple;font-size:25px;"> Click here to enter---&gt;</span><span style="color:purple;font-size:25px;"> <a href="https://us02web.zoom.us/j/84120591150?pwd=UHlSTUFIUHpoZnFsa25KVzM1TzdVUT09"><img src="look_md_blk.gif" width="60" height="27" alt=""/></a></span></p>
 <p style="color:purple;font-size:20px;"><a href="mailto:forsakentarot@gmail.com"><img src="glassbutton-email1w.gif" width="84" height="40" alt=""/></a></p>
 	<p><script type="text/javascript" src="//counter.websiteout.net/js/3/5/0/0"></script></p>
-<img src="fireline.gif" width="571" height="40" alt=""/><img src="fireline.gif" width="571" height="40" alt=""/> </div>
+<a href="https://forms.gle/9N1CyskKfqCrz4BH8"><img src="fireline.gif" width="571" height="40" alt=""/></a><a href ="https://forms.gle/9N1CyskKfqCrz4BH8"><img src="fireline.gif" width="571" height="40" alt=""/></a> </div>
 	
 </body>
 </html>
